# ymdf

./: .gitignore  README.md  flare-generator.py  phab-ymdf.sublime-project  setup.cfg  ymdf.py
src/jupyter-notebooks/: FlareFinderRoutineCOS.ipynb  FlareFinderRoutineTESS.ipynb  SyntheticFlareGeneratorYMDF.ipynb
src/jupyter-notebooks/data/: models.pkl
src/phab/ymdf/: __init__.py  _version.py  flare-finder.py  flare_finder.py  model.py
