[metadata]
name = ymdf
#version = attr: %(name)s.version.__version__
version = attr: phab._version.__version__
author = retif
description = Young M dwarf flare model
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, astrophysics, cosmology, science
url = https://github.com/cepylka/ymdf
project_urls =
    Documentation = https://ymdf.phab.decovar.dev/
    Bug Tracker = https://github.com/cepylka/ymdf/issues
    Changelog = https://github.com/cepylka/ymdf/blob/master/changelog.md
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    astropy
    lightkurve
    matplotlib
    numpy
    pandas
    pandera
    progressbar
    scipy
    seaborn

[options.packages.find]
where = src
